--- a/.github/workflows/publish-java-gradle.yml
+++ b/.github/workflows/publish-java-gradle.yml
@@ -8,6 +8,8 @@ jobs:
       packages: write 
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # include all history and tags
       - uses: actions/setup-java@v3
         with:
           java-version: '8'
@@ -22,5 +24,4 @@ jobs:
         with:
           arguments: publish
         env:
-#          GITHUB_TOKEN: ${{ secrets.JAVA_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
