--- a/.github/workflows/publish-java-gradle.yml
+++ b/.github/workflows/publish-java-gradle.yml
@@ -1,5 +1,8 @@
 name: Publish package to GitHub Packages
-on: workflow_dispatch
+on: 
+  workflow_dispatch:
+  release:
+    types: [created]
 jobs:
   publish:
     runs-on: ubuntu-latest 
