--- a/.github/workflows/publish-java-gradle.yml
+++ b/.github/workflows/publish-java-gradle.yml
@@ -4,8 +4,33 @@ on:
   release:
     types: [created]
 jobs:
+  validate:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        test_java_version: ['8', '11', '17']
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          java-version: ${{matrix.test_java_version}} #'8'
+          distribution: 'adopt'
+          cache: 'gradle'
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
+        
+      - name: Build with Gradle
+        id: build_with_gradle
+        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+        with:
+          arguments: build
+        
+    
   publish:
     runs-on: ubuntu-latest 
+    needs: validate
     permissions: 
       contents: read
       packages: write 
@@ -22,6 +47,7 @@ jobs:
         run: chmod +x gradlew
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
+        
       - name: Publish package
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
