--- a/.github/workflows/display_jgitver_version.yml
+++ b/.github/workflows/display_jgitver_version.yml
@@ -8,6 +8,17 @@ jobs:
   display_version:
     runs-on: ubuntu-latest
     steps:
+    
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # include all history and tags
+      - uses: actions/setup-java@v3
+        with:
+          java-version: '8'
+          distribution: 'adopt'
+          cache: 'gradle'
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
       - name: display version
         run: gradle version
