--- a/.github/workflows/display_jgitver_version.yml
+++ b/.github/workflows/display_jgitver_version.yml
@@ -12,6 +12,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0 # include all history and tags
+          
+      - name: checkout does not include tag annotation
+        run: git fetch --force --tags
+        
       - uses: actions/setup-java@v3
         with:
           java-version: '8'
