--- a/.github/workflows/display_jgitver_version.yml
+++ b/.github/workflows/display_jgitver_version.yml
@@ -9,7 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     
-      - uses: actions/checkout@v3
+#      - uses: actions/checkout@v3
+      - uses: actions/checkout@v1
         with:
           fetch-depth: 0 # include all history and tags
           
@@ -28,7 +29,7 @@ jobs:
         run: git log
 
       - name: display version
-        run: gradle version
+        run: gradle version --warning-mode all
         
       - name: job output
         run: |
