--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,8 @@ jgitver {
 
 group = 'com.kanezi.github'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+//sourceCompatibility = 1.8
+//targetCompatibility = 1.8
 
 repositories {
   mavenCentral()
