--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ repositories {
 dependencies {
   // Use JUnit Jupiter for testing.
   testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
-  implementation 'com.google.guava:guava:29.0-jre'
+  //implementation 'com.google.guava:guava:32.1.1-jre'
 }
 
 java {
