--- a/.github/workflows/showcase.yml
+++ b/.github/workflows/showcase.yml
@@ -3,16 +3,34 @@ name: GitHub actions showcase
 on: workflow_dispatch
 
 jobs:
-  showcase:
-  
-    runs-on: ubunutu-latest
+
+  Explore-GitHub-Actions:
+    runs-on: ubuntu-latest
     steps:
-      - run: echo "job is running on: ${{ runner.os }}"
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
+      - run: echo "🍏 This job's status is ${{ job.status }}."
+      
+  showcase:
+    runs-on: ubunutu-latest
+
+    steps:
+      - run: echo "This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      
+      - run: echo "Job is running on ${{ runner.os }}"
       
       - name: Display user info
-        run: echo "User: ${{github.actor}}"
+#        run: echo "User: ${{github.actor}}"
         
-      - run: echo "branch name: ${{github.ref}}"
+#      - run: echo "branch name: ${{github.ref}}"
       
       - name: display content of workspace
         run: ls ${{ github.workspace }}      
