--- a/.github/workflows/showcase.yml
+++ b/.github/workflows/showcase.yml
@@ -10,6 +10,10 @@ jobs:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      
+      - name: List files in the repository pre checkout
+        run: ls ${{ github.workspace }}
+        
       - name: Check out repository code
         uses: actions/checkout@v3
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
@@ -18,31 +22,6 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
-      
-  showcase:
-    runs-on: ubunutu-latest
-
-    steps:
-      - run: echo "This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      
-      - run: echo "Job is running on ${{ runner.os }}"
-      
-      - name: Display user info
-        run: echo "${{github.actor}} is testing out GitHub Actions"
-        
-#      - run: echo "branch name: ${{github.ref}}"
-      
-      - name: display content of workspace
-        run: ls ${{ github.workspace }}      
-        
-      - name: Check out repository code
-        uses: actions/checkout@v3
-        
-      - name: display content of workspace
-        run: |
-          ls ${{ github.workspace }}    
-
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       
       - name: runners come with preinstalled software
         run: |
